# LZV

LimitedLZV/: CMakeLists.txt  Reader.cpp  Reader.h  Writer.cpp  Writer.h  decode.cpp  decode.h  encode.cpp  encode.h  main.cpp
UnlimitedLZV/: CMakeLists.txt  Reader.cpp  Reader.h  Writer.cpp  Writer.h  decode.cpp  decode.h  encode.cpp  encode.h  int_code.cpp  int_code.h  main.cpp
